Start to look more like actual page
CSS needs major cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     <header>
-      hi
+      <img src="/images/name.png" alt="John J. Camilleri" id="name" />
     </header>
 
     <div class="page-content">
@@ -16,7 +16,7 @@
     </div>
 
     <footer>
-      John &ldquo;the J stands for John J. Camilleri&rdquo; Camilleri.
+      John &ldquo;the J stands for John J. Camilleri&rdquo; Camilleri, 2016
     </footer>
 
   </body>
