Building and deploying to www.cse.chalmers.se and johnjcamilleri.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
   {% include head.html %}
   <body>
     <header>
-      <img src="/images/photo.jpg" alt="Profile photo" class="frame" />
-      <a href="/"><img src="/images/name.png" alt="John J. Camilleri" id="name" /></a>
+      <img src="{{ site.baseurl }}/images/photo.jpg" alt="Profile photo" class="frame" />
+      <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/name.png" alt="John J. Camilleri" id="name" /></a>
     </header>
     <div class="page-content">
       {{ content }}
