--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       {{ content }}
     </div>
     <footer>
-      John &ldquo;the J stands for John J. Camilleri&rdquo; Camilleri, 2016
+      the J stands for “John J. Camilleri”
     </footer>
   </body>
 </html>
