--- a/css/main.scss
+++ b/css/main.scss
@@ -35,9 +35,9 @@ body {
   line-height: $base-line-height;
   color: $text-color;
   max-width: $content-width;
-  margin: 0 auto 5em auto;
+  margin: 0 auto $spacing-unit auto;
   text-shadow: 1px 1px 1px white;
-  background: url("{{ site.baseurl }}/images/background.jpg") repeat scroll 0 -350px #EEEEEE;
+  background: url("{{ site.baseurl }}/images/background.jpg") repeat scroll 0 -350px #eee;
 }
 
 img.frame {
@@ -56,7 +56,7 @@ img#name {
 
 h2 {
   font-weight:normal;
-  color:#555;
+  color: lighten($text-color, 10%);;
 }
 
 strong {
@@ -64,10 +64,9 @@ strong {
 }
 
 .updated {
-  color: #aaa;
+  margin-top: -0.5*$spacing-unit;
+  color: lighten($text-color, 40%);
   display: block;
-  margin-bottom: $spacing-unit;
-  font-style:normal;
   text-align:center;
 }
 
@@ -117,10 +116,10 @@ code {
 }
 
 footer {
-  margin-top: 3*$spacing-unit;
-  padding-top: $spacing-unit;
+  margin-top: $spacing-unit;
+  padding-top: 0.5*$spacing-unit;
   text-align: center;
-  border-top: 1px solid #aaa;
-  color: #888;
+  border-top: 1px solid lighten($text-color, 55%);
+  color: lighten($text-color, 50%);
   clear: both;
 }
